Initial commit on frontend, added maven resources, added favicon, added bower

--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,11 @@ nbbuild/
 dist/
 nbdist/
 .nb-gradle/
+
+### Own stuff ###
+src/main/resources/application.properties
+mvnw
+mvnw.cmd
+.mvn/wrapper/maven-wrapper.jar
+.mvn/wrapper/maven-wrapper.properties
+src/main/webapp/bower_components
