Added home controller and view, topnav directive, ui-router and bootstrap

--- a/src/main/webapp/bower.json
+++ b/src/main/webapp/bower.json
@@ -19,6 +19,8 @@
     "tests"
   ],
   "dependencies": {
-    "angular": "^1.6.1"
+    "angular": "^1.6.1",
+    "angular-ui-router": "^0.3.2",
+    "angular-bootstrap": "^2.4.0"
   }
 }
