Added angular-jwt, angular-storage, initial commit on frontend side of handling authentication

--- a/src/main/webapp/bower.json
+++ b/src/main/webapp/bower.json
@@ -21,6 +21,8 @@
   "dependencies": {
     "angular": "^1.6.1",
     "angular-ui-router": "^0.3.2",
-    "angular-bootstrap": "^2.4.0"
+    "angular-bootstrap": "^2.4.0",
+    "a0-angular-storage": "^0.0.15",
+    "angular-jwt": "^0.1.8"
   }
 }
